# openphone-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_ALIGNMENT_SUMMARY.md  LICENSE  OPENAPI_ALIGNMENT.md  README.md  WEBHOOKS_ALIGNMENT.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
examples/: basic_usage.py  raw_request_comparison.py  raw_request_usage.py
scripts/: bump.sh  version.py
src/openphone_python/: __init__.py  _version.py  client.py  exceptions.py
src/openphone_python/auth/: __init__.py  api_key.py
src/openphone_python/models/: __init__.py  base.py  call.py  call_recording.py  call_summary.py  call_transcript.py  contact.py  contact_custom_field.py  conversation.py  message.py  phone_number.py  webhook.py
src/openphone_python/resources/: __init__.py  base.py  call_recordings.py  call_summaries.py  call_transcripts.py  calls.py  contact_custom_fields.py  contacts.py  conversations.py  messages.py  phone_numbers.py  webhooks.py
src/openphone_python/types/: __init__.py  common.py
src/openphone_python/utils/: __init__.py  formatting.py  pagination.py  raw_request.py  validation.py
tests/: test_client.py
